Overflow fix for sponsor-inner

--- a/style/style.less
+++ b/style/style.less
@@ -258,6 +258,7 @@ header {
     .sponsors-inner {
         // Shrink the padding
         padding: 0 60px;
+        overflow: hidden;
 
         a {
             .border-box();
